--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,22 @@
-env 
+# compiled output
+/dist
+/node_modules
+
+# Logs
+logs
+*.log
+npm-debug.log*
+pnpm-debug.log*
+
+# IDE - VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
 .env
+env
+
+.fake
+.ionide
